--- a/src/app/modules/dashboard/pages/country/country.component.html
+++ b/src/app/modules/dashboard/pages/country/country.component.html
@@ -9,6 +9,43 @@
     </div>
 
     <div class="row mt-5">
+        <div class="col-12">
+            <div class="pills-container">
+                <ul class="nav nav-pills nav-fill">
+                    <li class="nav-item">
+                        <a class="nav-link p-2" [ngClass]="{'active': selectedTab1 === 1}"
+                            (click)="changeSectorData('search', 1)">Search</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link p-2" [ngClass]="{'active': selectedTab1 === 2}"
+                            (click)="changeSectorData('marketing', 2)">Marketing</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link p-2" [ngClass]="{'active': selectedTab1 === 3}"
+                            (click)="changeSectorData('sales', 3)">Ventas</a>
+                    </li>
+                </ul>
+            </div>
+        </div>
+        <div class="col-12 mt-4">
+            <div class="card">
+                <div class="card-header">
+                    <ng-container [ngSwitch]="selectedTab1">
+                        <span *ngSwitchCase="1" class="h4">Categorias por retailer - Search</span>
+                        <span *ngSwitchCase="2" class="h4">Categorias por retailer - Marketing</span>
+                        <span *ngSwitchCase="3" class="h4">Categorias por retailer - Ventas</span>
+                    </ng-container>
+                </div>
+                <div class="card-body">
+                    <app-chart-heat-map [data]="categoriesXSector" name="categories-by-retailer" categoryX="retailer"
+                        categoryY="category" height="250px">
+                    </app-chart-heat-map>
+                </div>
+            </div>
+        </div>
+    </div>
+
+    <div class="row mt-5">
         <!-- devices -->
         <div class="col-12 col-lg-6 mb-5">
             <div class="card">
@@ -67,12 +104,12 @@
             <div class="pills-container">
                 <ul class="nav nav-pills nav-fill">
                     <li class="nav-item">
-                        <a class="nav-link p-2" [ngClass]="{'active': selectedTab1 === 1}"
-                            (click)="changeSectorData('users', 1)">Usuarios</a>
+                        <a class="nav-link p-2" [ngClass]="{'active': selectedTab2 === 1}"
+                            (click)="changeSectorData2('users', 1)">Usuarios</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link p-2" [ngClass]="{'active': selectedTab1 === 2}"
-                            (click)="changeSectorData('sales', 2)">Ventas</a>
+                        <a class="nav-link p-2" [ngClass]="{'active': selectedTab2 === 2}"
+                            (click)="changeSectorData2('sales', 2)">Ventas</a>
                     </li>
                 </ul>
             </div>
@@ -80,11 +117,11 @@
         <div class="col-12 mt-4">
             <div class="card">
                 <div class="card-header">
-                    <span class="h4" [hidden]="selectedTab1 === 2">Usuarios por sector</span>
-                    <span class="h4" [hidden]="selectedTab1 === 1">Ventas por sector</span>
+                    <span class="h4" [hidden]="selectedTab2 === 2">Usuarios por sector</span>
+                    <span class="h4" [hidden]="selectedTab2 === 1">Ventas por sector</span>
                 </div>
                 <div class="card-body">
-                    <app-chart-line-series [valueName]="valueName" [valueFormat]="selectedTab1 === 2 && 'USD'"
+                    <app-chart-line-series [valueName]="valueName" [valueFormat]="selectedTab2 === 2 && 'USD'"
                         [series]="saleAndUsersBySector" name="sales-users-by-sector">
                     </app-chart-line-series>
                 </div>
