--- a/src/app/modules/dashboard/components/overview-wrapper/overview-wrapper.component.html
+++ b/src/app/modules/dashboard/components/overview-wrapper/overview-wrapper.component.html
@@ -31,14 +31,14 @@
             <div class="card">
                 <div class="card-header">
                     <ng-container [ngSwitch]="selectedTab1">
-                        <span *ngSwitchCase="1" class="h4">Categorias por retailer - Search</span>
-                        <span *ngSwitchCase="2" class="h4">Categorias por retailer - Marketing</span>
-                        <span *ngSwitchCase="3" class="h4">Categorias por retailer - Ventas</span>
+                        <span *ngSwitchCase="1" class="h4">Categorías por retailer - Search</span>
+                        <span *ngSwitchCase="2" class="h4">Categorías por retailer - Marketing</span>
+                        <span *ngSwitchCase="3" class="h4">Categorías por retailer - Ventas</span>
                     </ng-container>
                 </div>
                 <div class="card-body">
-                    <app-chart-heat-map [data]="categoriesXSector" name="categories-by-retailer" categoryX="retailer"
-                        categoryY="category" height="250px">
+                    <app-chart-heat-map [data]="categoriesXSector" [name]="selectedType + 'categories-by-retailer'"
+                        categoryX="retailer" categoryY="category" height="250px">
                     </app-chart-heat-map>
                 </div>
             </div>
@@ -46,27 +46,42 @@
     </div>
 
     <div class="row mt-5">
+        <div class="col-12">
+            <div class="pills-container">
+                <ul class="nav nav-pills nav-fill">
+                    <li class="nav-item">
+                        <a class="nav-link p-2" [ngClass]="{'active': selectedTab2 === 1}"
+                            (click)="changeDeviceGenderData('traffic', 1)">Tráfico</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link p-2" [ngClass]="{'active': selectedTab2 === 2}"
+                            (click)="changeDeviceGenderData('sales', 2)">Ventas</a>
+                    </li>
+                </ul>
+            </div>
+        </div>
         <!-- devices -->
-        <div class="col-12 col-lg-6 mb-5">
+        <div class="col-12 col-lg-6 mt-4">
             <div class="card">
                 <div class="card-header">
-                    <span class="h4">Dispositivos</span>
+                    <span class="h4">{{selectedTab2 === 1 ? 'Tráfico' : 'Ventas'}} por dispositivos</span>
                 </div>
                 <div class="card-body">
-                    <app-chart-pictorial [data]="devices" name="devices-by-sector" category="name" iconType="monitor">
+                    <app-chart-pictorial [data]="devices" [name]="selectedType + 'devices-by-sector'" category="name"
+                        iconType="monitor">
                     </app-chart-pictorial>
                 </div>
             </div>
         </div>
 
         <!-- gender -->
-        <div class="col-12 col-lg-6 mb-5">
+        <div class="col-12 col-lg-6 mt-4">
             <div class="card">
                 <div class="card-header">
-                    <span class="h4">Género</span>
+                    <span class="h4">{{selectedTab2 === 1 ? 'Tráfico' : 'Ventas'}} por Género</span>
                 </div>
                 <div class="card-body">
-                    <app-chart-pictorial [data]="gender" name="gender-by-sector" category="name">
+                    <app-chart-pictorial [data]="gender" [name]="selectedType + 'gender-by-sector'" category="name">
                     </app-chart-pictorial>
                 </div>
             </div>
@@ -99,16 +114,16 @@
         </div> -->
     </div>
 
-    <div class="row">
+    <div class="row mt-5">
         <div class="col-12">
             <div class="pills-container">
                 <ul class="nav nav-pills nav-fill">
                     <li class="nav-item">
-                        <a class="nav-link p-2" [ngClass]="{'active': selectedTab2 === 1}"
+                        <a class="nav-link p-2" [ngClass]="{'active': selectedTab3 === 1}"
                             (click)="changeSectorData2('users', 1)">Usuarios</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link p-2" [ngClass]="{'active': selectedTab2 === 2}"
+                        <a class="nav-link p-2" [ngClass]="{'active': selectedTab3 === 2}"
                             (click)="changeSectorData2('sales', 2)">Ventas</a>
                     </li>
                 </ul>
@@ -117,12 +132,12 @@
         <div class="col-12 mt-4">
             <div class="card">
                 <div class="card-header">
-                    <span class="h4" [hidden]="selectedTab2 === 2">Usuarios por sector</span>
-                    <span class="h4" [hidden]="selectedTab2 === 1">Ventas por sector</span>
+                    <span class="h4" [hidden]="selectedTab3 === 2">Usuarios por sector</span>
+                    <span class="h4" [hidden]="selectedTab3 === 1">Ventas por sector</span>
                 </div>
                 <div class="card-body">
-                    <app-chart-line-series [valueName]="valueName" [valueFormat]="selectedTab2 === 2 && 'USD'"
-                        [series]="saleAndUsersBySector" name="sales-users-by-sector">
+                    <app-chart-line-series [valueName]="valueName" [valueFormat]="selectedTab3 === 2 && 'USD'"
+                        [series]="saleAndUsersBySector" [name]="selectedType + 'sales-users-by-sector'">
                     </app-chart-line-series>
                 </div>
             </div>
@@ -136,8 +151,9 @@
                     <span class="h4">Inversión vs Revenue</span>
                 </div>
                 <div class="card-body">
-                    <app-chart-line-comparison [data]="investmentVsRevenue" name="investment-vs-revenue"
-                        valueName1="Inversión" valueName2="Revenue" valueFormat="USD">
+                    <app-chart-line-comparison [data]="investmentVsRevenue"
+                        [name]="selectedType + 'investment-vs-revenue'" valueName1="Inversión" valueName2="Revenue"
+                        valueFormat="USD">
                     </app-chart-line-comparison>
                 </div>
             </div>
