--- a/src/app/modules/dashboard/pages/retailer/retailer.component.html
+++ b/src/app/modules/dashboard/pages/retailer/retailer.component.html
@@ -2,18 +2,27 @@
     <ul class="nav nav-tabs mb-4">
         <li class="nav-item">
             <a class="nav-link" [ngClass]="{'active bg-light' : activeTabView === 1}" (click)="activeTabView = 1">
-                <span class="h2 py-2 ml-3 mr-3">Campaña hacia el retail</span>
+                <span class="h2 py-2 ml-3 mr-3">Visión general</span>
             </a>
         </li>
         <li class="nav-item">
             <a class="nav-link" [ngClass]="{'active bg-light' : activeTabView === 2}" (click)="activeTabView = 2">
+                <span class="h2 py-2 ml-3 mr-3">Campaña hacia el retail</span>
+            </a>
+        </li>
+        <li class="nav-item">
+            <a class="nav-link" [ngClass]="{'active bg-light' : activeTabView === 3}" (click)="activeTabView = 3">
                 <span class="h2 py-2 ml-3 mr-3">Campaña en el retail</span>
             </a>
         </li>
     </ul>
 
     <ng-container *ngIf="activeTabView === 1">
-        <div class="row mb-5">
+        <app-overview-wrapper selectedType="retailer"></app-overview-wrapper>
+    </ng-container>
+
+    <ng-container *ngIf="activeTabView === 2">
+        <div class="row my-5">
             <div class="col-12">
                 <div class="card">
                     <div class="card-body">
@@ -23,111 +32,14 @@
                 </div>
             </div>
         </div>
-        <div class="row mb-5" *ngFor="let item of [1,2,3]; let i = index">
-            <div class="col-12">
-                <div class="header bg-light mb-2">
-                    <p class="h4 py-1 ml-3 mr-3">
-                        <ng-container [ngSwitch]="item">
-                            <span *ngSwitchCase="1">Google Search - Display & Video</span>
-                            <span *ngSwitchCase="2">Display & Video (Marketing)</span>
-                            <span *ngSwitchCase="3">Social Media</span>
-                        </ng-container>
 
-                    </p>
-                </div>
-                <div class="adaptable-container">
-                    <table mat-table [dataSource]="dataSource">
-
-                        <!-- name column -->
-                        <ng-container matColumnDef="name">
-                            <th mat-header-cell *matHeaderCellDef> Campaña </th>
-                            <td mat-cell *matCellDef="let element"> {{element.name}} </td>
-                        </ng-container>
-
-                        <!-- investment column -->
-                        <ng-container matColumnDef="investment">
-                            <th mat-header-cell *matHeaderCellDef> Inversión </th>
-                            <td mat-cell *matCellDef="let element"> {{element.investment}} </td>
-                        </ng-container>
-
-                        <!-- impressions -->
-                        <ng-container matColumnDef="impressions">
-                            <th mat-header-cell *matHeaderCellDef> Impresiones</th>
-                            <td mat-cell *matCellDef="let element"> {{element.impressions}} </td>
-                        </ng-container>
-
-                        <!-- clicks -->
-                        <ng-container matColumnDef="clicks">
-                            <th mat-header-cell *matHeaderCellDef> Clicks</th>
-                            <td mat-cell *matCellDef="let element"> {{element.clicks}} </td>
-                        </ng-container>
-
-                        <!-- CTR -->
-                        <ng-container matColumnDef="ctr">
-                            <th mat-header-cell *matHeaderCellDef> CTR</th>
-
-                            <td mat-cell *matCellDef="let element">
-                                <div class="value-container">
-                                    <span>{{element.ctr}}</span>
-                                    <i class="fas fa-arrow-up text-success"
-                                        *ngIf="element.ctr >= element.ctr_benchmark"></i>
-                                    <i class="fas fa-arrow-down text-danger"
-                                        *ngIf="element.ctr < element.ctr_benchmark"></i>
-                                </div>
-                            </td>
-
-                        </ng-container>
-
-                        <!-- CPM -->
-                        <ng-container matColumnDef="cpm">
-                            <th mat-header-cell *matHeaderCellDef> CPM</th>
-                            <td mat-cell *matCellDef="let element"> {{element.cpm}} </td>
-                        </ng-container>
-
-                        <!-- CPC -->
-                        <ng-container matColumnDef="cpc">
-                            <th mat-header-cell *matHeaderCellDef> CPC</th>
-                            <td mat-cell *matCellDef="let element"> {{element.cpc}} </td>
-                        </ng-container>
-
-                        <!-- ROAS -->
-                        <ng-container *ngIf="i === 0">
-                            <ng-container matColumnDef="roas">
-                                <th mat-header-cell *matHeaderCellDef> ROAS</th>
-                                <td mat-cell *matCellDef="let element"> {{element.roas}}% </td>
-                            </ng-container>
-                        </ng-container>
-
-                        <!-- disclaimer column -->
-                        <ng-container matColumnDef="disclaimer">
-                            <td mat-footer-cell *matFooterCellDef colspan="3">
-                                <div class="text-danger text-center" *ngIf="getReqStatus === 3">
-                                    Ocurrió un error al consultar los usuarios
-                                </div>
-                            </td>
-                        </ng-container>
-
-                        <ng-container *ngIf="i === 0">
-                            <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
-                            <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
-                        </ng-container>
-
-                        <ng-container *ngIf="i !== 0">
-                            <tr mat-header-row *matHeaderRowDef="displayedColumns2"></tr>
-                            <tr mat-row *matRowDef="let row; columns: displayedColumns2;"></tr>
-                        </ng-container>
-
-                        <tr mat-footer-row *matFooterRowDef="['disclaimer']" class="example-second-footer-row"
-                            [hidden]="getReqStatus !== 3"></tr>
-                    </table>
-                </div>
-                <mat-paginator class="paginator" [pageSizeOptions]="[5, 10, 20]" showFirstLastButtons></mat-paginator>
-            </div>
-        </div>
+        <app-campaigns-tables></app-campaigns-tables>
     </ng-container>
 
-    <ng-container *ngIf="activeTabView === 2">
-        <app-retail-filters></app-retail-filters>
+    <ng-container *ngIf="activeTabView === 3">
+        <div class="mt-5">
+            <app-retail-filters></app-retail-filters>
+        </div>
 
         <!-- CARD STATS -->
         <div class="row mt-5">
