--- a/src/app/modules/dashboard/components/campaigns-tables/campaigns-tables.component.html
+++ b/src/app/modules/dashboard/components/campaigns-tables/campaigns-tables.component.html
@@ -9,8 +9,8 @@
             <table mat-table [dataSource]="dataSource1">
                 <!-- name column -->
                 <ng-container matColumnDef="name">
-                    <th mat-header-cell *matHeaderCellDef [style.width.px]="1000"> Campaña </th>
-                    <td mat-cell *matCellDef="let element" [style.width.px]="1000">
+                    <th mat-header-cell *matHeaderCellDef> Campaña </th>
+                    <td mat-cell *matCellDef="let element" [style.width.%]="45">
                         <div class="lg-container">{{element.name}}</div>
                     </td>
                 </ng-container>
@@ -100,8 +100,8 @@
             <table mat-table [dataSource]="dataSource2">
                 <!-- name column -->
                 <ng-container matColumnDef="name">
-                    <th mat-header-cell *matHeaderCellDef [style.width.px]="1000"> Campaña </th>
-                    <td mat-cell *matCellDef="let element" [style.width.px]="1000">
+                    <th mat-header-cell *matHeaderCellDef> Campaña </th>
+                    <td mat-cell *matCellDef="let element" [style.width.%]="45">
                         <div class="lg-container">{{element.name}}</div>
                     </td>
                 </ng-container>
@@ -192,8 +192,8 @@
                 <!-- name column -->
                 <ng-container matColumnDef="name">
 
-                    <th mat-header-cell *matHeaderCellDef [style.width.px]="1000"> Campaña </th>
-                    <td mat-cell *matCellDef="let element" [style.width.px]="1000">
+                    <th mat-header-cell *matHeaderCellDef> Campaña </th>
+                    <td mat-cell *matCellDef="let element" [style.width.%]="45">
                         <div class="lg-container">{{element.name}}</div>
                     </td>
                 </ng-container>
