--- a/src/app/modules/dashboard/components/campaigns-tables/campaigns-tables.component.scss
+++ b/src/app/modules/dashboard/components/campaigns-tables/campaigns-tables.component.scss
@@ -1,21 +1,28 @@
 table {
+    border-collapse: collapse;
+    table-layout: auto;
     width: 100%;
+
+    th:not(:first-of-type),
+    td:not(:first-of-type) {
+        text-align: center;
+    }
 }
 
 .adaptable-container {
     overflow: auto;
 }
 
-
 .lg-container {
-    overflow: hidden;
+    max-width: 700px;
     text-overflow: ellipsis;
+    overflow: hidden;
     white-space: nowrap;
-    width: inherit;
 }
 
 .value-container {
     display: grid;
-    grid-template-columns: 40px auto;
+    grid-template-columns: 40px 30px;
     gap: 8px;
+    justify-content: center;
 }
