--- a/src/app/modules/dashboard/components/campaigns-tables/campaigns-tables.component.scss
+++ b/src/app/modules/dashboard/components/campaigns-tables/campaigns-tables.component.scss
@@ -21,6 +21,7 @@ table {
 }
 
 .value-container {
+    align-items: center;
     display: grid;
     grid-template-columns: 40px 30px;
     gap: 8px;
