--- a/src/app/modules/dashboard/components/campaigns-tables/campaigns-tables.component.scss
+++ b/src/app/modules/dashboard/components/campaigns-tables/campaigns-tables.component.scss
@@ -1,33 +1,39 @@
-table {
-    border-collapse: collapse;
-    table-layout: auto;
-    width: 100%;
-
-    th:not(:first-of-type),
-    td:not(:first-of-type) {
-        text-align: center;
+.campaigns-tables {
+    table {
+        border-collapse: collapse;
+        table-layout: auto;
+        width: 100%;
+    
+        th:not(:first-of-type),
+        td:not(:first-of-type) {
+            text-align: center;
+        }
     }
-}
-
-.adaptable-container {
-    overflow: auto;
-}
-
-.lg-container {
-    max-width: 700px;
-    text-overflow: ellipsis;
-    overflow: hidden;
-    white-space: nowrap;
-}
-
-.value-container {
-    align-items: center;
-    display: grid;
-    grid-template-columns: 40px 30px;
-    gap: 8px;
-    justify-content: center;
+    
+    .adaptable-container {
+        overflow: auto;
+    }
+    
+    .lg-container {
+        max-width: 700px;
+        span {
+            text-overflow: ellipsis;
+            overflow: hidden;
+            white-space: nowrap;
+            max-width: inherit;
+            display: inline-block;
+        }
+    }
+    
+    .value-container {
+        align-items: center;
+        display: grid;
+        grid-template-columns: 40px 30px;
+        gap: 8px;
+        justify-content: center;
+    } 
 }
 
 .custom-tooltip {
     max-width: unset !important;
-  }
+}
