--- a/src/app/modules/dashboard/components/acquisition-wrapper/acquisition-wrapper.component.scss
+++ b/src/app/modules/dashboard/components/acquisition-wrapper/acquisition-wrapper.component.scss
@@ -1,24 +1,49 @@
-.card-header {
-    padding: 0.5rem 1.5rem;
-}
-
-table {
-    width: 100%;
-}
-
-.adaptable-container {
-    overflow: auto;
-}
-
-
-.pills-container {
-    width: 60%;
-
-    .nav-item .nav-link {
-        cursor: pointer;
+.acquisition-wrapper {
+    .card-header {
+        padding: 0.5rem 1.5rem;
     }
-
-    @media screen and (max-width: 820px) {
+    
+    table {
         width: 100%;
+        th:nth-of-type(n + 4),
+        td:nth-of-type(n + 4) {
+            text-align: center;
+        }
+    }
+    
+    .adaptable-container {
+        overflow: auto;
+    }
+    
+    .lg-container {
+        max-width: 14rem;
+        span {
+            text-overflow: ellipsis;
+            overflow: hidden;
+            white-space: nowrap;
+            max-width: inherit;
+            display: inline-block;
+        }
+    }
+    
+    .value-container {
+        align-items: center;
+        display: grid;
+        grid-template-columns: 40px 30px;
+        gap: 8px;
+        justify-content: center;
+    }
+    
+    .pills-container {
+        width: 60%;
+    
+        .nav-item .nav-link {
+            cursor: pointer;
+        }
+    
+        @media screen and (max-width: 820px) {
+            width: 100%;
+        }
     }
 }
+
